--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -4,6 +4,15 @@
 
 Elaborate on your learnings here in `src/exercise/01.md`
 
+- useReducer allows more control over state variable changes and how the variable updates. Logic is held within the reducer instead of throughout alternative useEffects/useState. If the elements of the state rely on one another, while being updated, then useReducer is better.
+- The reducer takes the 'state' and 'newState' and is called when the setter method is called.
+- Reducer can take anything as an 'action' parameter, function or value (props or any additional required info)
+- Can keep a state object in the reducer to hold various props and override when a change comes in, including any additional parameters.
+- setter functions have a reference to the current state within themselves
+- when using switches for dispatch function, consider throwing an error for default case to catch invalid action types
+- third parameter for useReducer can be a method called with the initial value (2nd param), to lazy init the initial value
+
+
 ## Background
 
 React's `useState` hook can get you a really long way with React state
