--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -4,6 +4,17 @@
 
 Elaborate on your learnings here in `src/exercise/02.md`
 
+- Memoization returns the same computed value when the same input is given.
+- Functions in useEffects get called on every render, even when listed in the dependency array.
+- Memoization in React only caches the 'last' computed value
+- useCallback defines a state controlled function that updates only depending on given dependency array, between renders
+- useCallback for methods being called in useEffects, otherwise useEffect will regenerate new method everytime
+- Hooks are specific to within React functional components (useCallback is for memoized methods defined and to be used within the component itself)
+- Memoization is always for performance boosting, limiting unnecessary renders
+- Issue for when promises don't complete while component is unmounted (navigating page away), React has deprecated the warning however solved by handling unsafeDispatch. The promise can complete however appropriately does nothing to the unmounted component
+- Purpose of useCallback is to memoize a callback for use in dependency lists and props on memoized components. Unnecessary for all functions, but useful for those that derive a value
+
+
 ## Background
 
 ### Memoization in general
