--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -4,6 +4,16 @@
 
 Elaborate on your learnings here in `src/exercise/03.md`
 
+- Context allows global variable management, through the React API, that helps use variables where they need to be. (instead of lifting state/prop drilling)
+- Visbility given by the Context Provider and any elements held within the tree
+- Putting the Provider in its own componenet allows more control (useEffects, useStates) internally within the provider and when delivering the values.
+- The value prop returned with the Provider, is how you access the values within the Provider.
+- You can assign default values to 'value' when defining the context, these will be picked up on 'useContext' however updates to the variable will not be carried on to those outside of the Provider tree, and will only use the defaults
+- You can put all Context logic in a seperate file and import the Context Provider to wrap around the tree, and the usable hook for the values required.
+- Context implementation should be independent of other code. Can use a Provider function component (wrapper around the Context.Provider) and a custom hook (useContext) that returns the values from calling React.useContext (and validates if context exists). These two are what is exported when using the Context in a separate file.
+- Ensure to forward children props when using the Provider in a tree
+- Keep context as tight to the tree as required. Any more gloabl scope can lead to lack of performance. (as well as losing context of your context)
+
 ## Background
 
 Sharing state between components is a common problem. The best solution for this
