--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -4,6 +4,13 @@
 
 Elaborate on your learnings here in `src/exercise/04.md`
 
+- useLayoutEffect over useEffect when you are making observable changes to the DOM or measurements off of it.
+- UseLayoutEffect can also be useful to force an effect to run before a useEffect or when handling updates to a 'ref' variable (if a useEffect updates ref, the useLayoutEffect will obtain the old value of ref)
+- UseLayoutEffect runs before the browser paints the page and therefore will not require another state update (after painting, then useEffect runs). DOM changes after the paint will lag behind the paint, while those before will ensure the paint is updated.
+- UseLayoutEffects prevent 'flickers' from occuring when manipulating actual DOM elements
+- The browser repaints on DOM updates, before react runs the code, to ensure the page isnt blocked by the code and the user sees updates sooner. Can hel limit rerenders
+
+
 ## Background
 
 There are two ways to tell React to run side-effects after it renders:
