--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -4,6 +4,12 @@
 
 Elaborate on your learnings here in `src/exercise/05.md`
 
+- Recall, React is declarative programming (what you do) vs. imperative programming (how you do)
+- You can 'ref' as an argument to a custom component, by applying the forward ref wrapper around the method. (ex. use case would be when you need to know if the custom component is in focus, referencing the custom component with respect to the DOM)
+- Manipulating the ref variable depending on DOM updates, during DOM updates, can be inconsistent, which is when useImperativeHandle can be useful. Should only be considered when making very tight changes to the DOM.
+- React.useImperativeHandle(ref, () => value)
+- Exposes an imperative API to the declarative React component. (Imperative being, actively scrolling to the elements)
+
 ## Background
 
 When we had class components, we could do stuff like this:
