--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -4,6 +4,11 @@
 
 Elaborate on your learnings here in `src/exercise/06.md`
 
+- useDebugValue only works with custom made hooks and does not appear in production builds. Only implemented within the hook itself.
+- Connects to show debug values through the React Developer Tools, specific to the custom hooks for any shown custom components using that hook.
+- The useDebugValue also takes a second arg for formatting, only runs computation in devtools instead of taking up main thread. 
+- React.useDebugValue(variables, ()=>formattedOutput)
+
 ## Background
 
 [The React DevTools browser extension](https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi?hl=en)
